# PolyMarketClawBot

./: .gitignore  LICENSE
polymarket-api/: .env  .gitignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  requirements.txt  skill.md  test_local.py  test_place_order.py
polymarket-api/app/: __init__.py  config.py  database.py  main.py
polymarket-api/app/clients/: gamma.py  polymarket.py  wallet.py
polymarket-api/app/middleware/: security.py
polymarket-api/app/models/: markets.py  orders.py  user.py
polymarket-api/app/routes/: __init__.py  advanced.py  events.py  health.py  markets.py  orders.py  security.py  wallet.py  webhook.py  websocket.py
polymarket-api/app/services/: advanced.py  market_import.py  market_service.py  monitor.py  order_service.py
polymarket-api/app/utils/: __init__.py  logger.py
polymarket-trading-bot-python-main/: pyproject.toml
polymarket-trading-bot-python-main/.github/: description.txt
simmer-sdk-main/: .gitignore  README.md  package.json  pyproject.toml
simmer-sdk-main/simmer_sdk/: solana_signing.py
simmer-sdk-main/simmer_sdk/scripts/: sign-solana.js
simmer-sdk-main/skills/: README.md  simmer-tradejournal.skill
simmer-sdk-main/skills/ai-divergence/: SKILL.md  ai_divergence.py
simmer-sdk-main/skills/arbscanner/: CONTEXT.md  SKILL.md  arb_scanner.py
simmer-sdk-main/skills/copytrading/: SKILL.md
simmer-sdk-main/skills/signalsniper/: SKILL.md
simmer-sdk-main/skills/tradejournal/: SKILL.md
simmer-sdk-main/skills/weather/: SKILL.md  weather_trader.py
simmer-sdk-main/skills/xsentiment/: CONTEXT.md
